--- a/client/.gitignore
+++ b/client/.gitignore
@@ -23,3 +23,5 @@ dist-ssr
 *.sln
 *.sw?
 client/node_modules
+/Users/moralesfamily/Desktop/WeatherAppFav/client/node_modules
+/Users/moralesfamily/Desktop/WeatherAppFav/client/node_modules
