--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
-DB_URI="postgresql://localhost/weather_app
+DB_URI="postgresql://localhost/weather_app;
+
+API_KEY = "22b45cf9c871e9b68d5965836077c6b6"
